--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
